# zynq-rpc

./: CMakeLists.txt  README.md
examples/: client_main.cpp  multi_client_main.cpp  server_main.cpp
include/: zmq_rpc.hpp  zync_rpc.hpp  zynq_rpc.hpp
src/: client.cpp  server.cpp
